--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+devture_vars_preserver_enabled: true
+
 devture_vars_preserver_src: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}/vars.yml"
 devture_vars_preserver_dst: ~
 
